--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
 
-    compile project(':DownLoader')
-//    compile 'com.github.LidongWen:DownLoadUtils:1.2.0'
+//    compile project(':DownLoader')
+    compile 'com.github.LidongWen:DownLoadUtils:1.2.0'
 
 }
